Fix dark mode

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -19,17 +19,28 @@ body {
   }
 }
 
-nav ul {
-  list-style: none;
-  padding: 10px 15px;
-  a {
-    text-decoration: none;
-    color: inherit;
-    &:hover {
-      text-decoration: underline;
+nav {    
+    ul {
+      list-style: none;
+      padding: 10px 15px;
+      margin: 0;
+  
+      li {
+        display: inline;
+        margin-right: 100px;
+  
+        a {
+          text-decoration: none;
+          color: inherit;
+  
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
     }
   }
-}
+  
 
 footer {
   padding: 10px;
